5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1643_2447.log
== TEST (2019-04-14 18:55:21) 
-- CODE:
preco = float(input("Pre&ccedilo"))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:55:48) 
-- CODE:
preco = float(input("Pre&ccedil;o"))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:02:55) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta" + round(falta, 1))
else if preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + round(troco. 1))
else:
	print("Obrigado!")
-- ERROR:
File "XXXX", line 7
    else if preco < pagamento:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:03:04) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta" + round(falta, 1))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + round(troco. 1))
else:
	print("Obrigado!")
-- ERROR:
File "XXXX", line 9
    print("Troco de " + round(troco. 1))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:03:17) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta" + round(falta, 1))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + round(troco, 1))
else:
	print("Obrigado!")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("Falta" + round(falta, 1))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:05:41) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta" + str(round(falta, 1)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 1)))
else:
	print("Obrigado!")
-- OUTPUT:
Falta26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:05:53) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta" + str(round(falta, 1)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 1)))
else:
	print("Obrigado!")
-- OUTPUT:
Falta26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:06:44) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 1)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 1)))
else:
	print("Obrigado!")
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:07:01) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 1)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 1)))
else:
	print("Obrigado! Volte Sempre")
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:07:36) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 1)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 1)))
else:
	print("Obrigado, volte sempre!")
-- EXECUTION TIME:
0.170127
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Obrigado, volte sempre!
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:07:54) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 1)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 1)))

-- EXECUTION TIME:
0.162049
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:08:45) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 2)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 2)))

-- EXECUTION TIME:
0.153143
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:09:54) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 2)))
elif preco < pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 2)))
elif preco == pagamento:
	print("Obrigado, volte sempre!")
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:11:19) 
-- CODE:
preco = float(input("Preco do produto: "))
pagamento = float(input("Pagamento: "))

if preco > pagamento:
	falta = preco - pagamento
	print("Falta " + str(round(falta, 2)))
elif preco <= pagamento:
	troco = pagamento - preco
	print("Troco de " + str(round(troco, 2)))

-- EXECUTION TIME:
0.144158
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
